--- a/study.html
+++ b/study.html
@@ -68,7 +68,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">I study</h2>
-							<p class="page-title__text">be right back, i need my coffee. </p>
+							<p class="page-title__text">these were all pretty much things that I studied. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
