--- a/study.html
+++ b/study.html
@@ -92,7 +92,7 @@
 													<div class="post__meta"><span class="date">Dec 1, 2023</span><span class="author"><a href="#">by Alpacabar</a></span></div>
 													<h2 class="post__title"><a href="blog-detail.html">how strong you think your password is?</a></h2>
 													<p class="post__text">The strength of a password is a crucial aspect in safeguarding personal and sensitive information in the digital age.</p>
-													<a class="md-btn md-btn--outline-primary" href="#">read more
+													<a class="md-btn md-btn--outline-primary" href="blog-detail.html">read more
 													</a>
 												</div>
 											</div><!-- End / post -->
