--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 				<section class="awe-section bg-gray">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6 col-lg-5 "><a><img src="assets/img/bagels.png" alt="" style="width: 122px;"/></a>
+							<div class="col-md-6 col-lg-5 "><a><img src="assets/img/kimchi-fried-rice.jpeg" alt="" style="width: 122px;"/></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
 								
